Поменяла items на list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header class="page-header">
         <nav class="main-nav">
           <div class="main-nav__wrapper main-nav__wrapper--close">
-            <ul class="main-nav__items">
+            <ul class="main-nav__list">
               <li class="main-nav__item"><a>Главная</a></li>
               <li class="main-nav__item"><a href="photo.html">Фото и видео</a></li>
               <li class="main-nav__item"><a href="form.html">Форма отзыва</a></li>
@@ -67,21 +67,21 @@
               <img src="img/photo-bridge.jpg" width="320" height="260" alt="">
             </div>
           </div>
-          <div class="reasons__wrapper">
+          <div class="reasons__wrapper reasons__wrapper--width">
             <div class="reasons__item reasons__item--dif">
               <div class="reasons__title">Небольшая площадь</div>
               <div class="reasons__number">- №3 -</div>
               <p>Все достопримечательности находятся очень близко</p>
             </div>
           </div>
-          <div class="reasons__wrapper">
+          <div class="reasons__wrapper reasons__wrapper--width">
             <div class="reasons__item reasons__item--dif">
               <div class="reasons__title">Красивая дорога</div>
               <div class="reasons__number">- №4 -</div>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </div>
-          <div class="reasons__wrapper">
+          <div class="reasons__wrapper reasons__wrapper--width">
             <div class="reasons__item reasons__item--dif">
               <div class="reasons__title">Мало туристов</div>
               <div class="reasons__number">- №5 -</div>
