--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
       <header class="page-header">
         <nav class="main-nav">
           <div class="main-nav__wrapper main-nav__wrapper--close">
-            <ul class="main-nav__items">
+            <ul class="main-nav__list">
               <li class="main-nav__item"><a href="index.html">Главная</a></li>
               <li class="main-nav__item"><a href="photo.html">Фото и видео</a></li>
               <li class="main-nav__item"><a>Форма отзыва</a></li>
