Поменяла ширину у item

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             </ul>
           </div>
           <div class="reasons__wrapper">
-            <div class="reasons__item">
+            <div class="reasons__item reasons__item--order">
               <div class="reasons__title">Там есть мост дьявола</div>
               <div class="reasons__number">- №2 -</div>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
-            <div class="reasons__image reasons__image--order">
+            <div class="reasons__image">
               <img src="img/photo-bridge.jpg" width="320" height="260" alt="">
             </div>
           </div>
