--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
         </section>
         <section class="reasons">
-          <div class="reasons__wrapper reasons__wrapper--wrap">
+          <div class="reasons__wrapper reasons__wrapper--transfer">
             <div class="reasons__item">
               <div class="reasons__title">Настоящий городок</div>
               <div class="reasons__number">- №1 -</div>
