--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
           </div>
         </section>
         <div class="interested">
-          <div class="interested__title">Заинересовались?</div>
+          <div class="interested__title">Заинтересовались?</div>
           <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <div class="interested__motel"><a href="#">Найти гостиницу</a></div>
-          <div class="interested__map"></div>
+        </div>
+        <div class="interested-map">
+          <img src="img/bg-map-mobile.jpg" width="320" height="350" alt="">
         </div>
       </div>
       <footer class="page-footer">
