Для b поставила класс

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
             </div>
             <ul class="reasons__lists">
               <li class="reasons__list reasons__list--sprite">
-                <b>Жилье</b>
+                <b class="reasons__list-title">Жилье</b>
                 <div class="reasons__list-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
               </li>
               <li class="reasons__list reasons__list--order reasons__list--sprite">
-                <b>Сувениры</b>
+                <b class="reasons__list-title">Сувениры</b>
                 <div class="reasons__list-text">Не только китайского, но и местного производства!</div>
               </li>
               <li class="reasons__list reasons__list--sprite">
-                <b>Еда</b>
+                <b class="reasons__list-title">Еда</b>
                 <div class="reasons__list-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
               </li>
             </ul>
