Для p поставила класс

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </section>
         <div class="interested">
           <div class="interested__title">Заинтересовались?</div>
-          <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <p class="interested__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <div class="interested__motel"><a href="#">Найти гостиницу</a></div>
         </div>
         <div class="interested-map">
