--- a/form.html
+++ b/form.html
@@ -20,12 +20,12 @@
           <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
         </nav>
         <div class="page-header__logo">
-          <img src="#" width="" height="" alt="Седона">
+          <img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона">
         </div>
       </header>
       <div class="content">
         <div class="content__mini-welcome">
-          <img src="#" width="" height="" alt="">
+          <img src="img/bg-back-mobile.jpg" width="320" height="390" alt="">
         </div>
         <section class="intro intro--hide">
           <h1 class="intro__title">Оставьте свой отзыв</h1>
