--- a/photo.html
+++ b/photo.html
@@ -20,21 +20,21 @@
           <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
         </nav>
         <div class="page-header__logo">
-          <img src="#" width="" height="" alt="Седона">
+          <img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона">
         </div>
       </header>
       <div class="content">
         <div class="content__mini-welcome">
-          <img src="#" width="" height="" alt="">
+          <img src="img/bg-back-mobile.jpg" width="320" height="158" alt="">
         </div>
         <section class="intro intro--hide">
-          <h1 class="intro__title">Фото и видео</h1>
-          <p class="intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+          <h1 class="intro__title intro__title--fsize">Фото и видео</h1>
+          <p class="intro__text intro__text--lineh">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </section>
         <section class="gallery">
           <div class="gallery__item">
             <figure class="gallery__image">
-              <img src="#" width="" height="" alt="">
+              <img src="img/photo-1-mobile.jpg" width="280" height="280" alt="">
               <figcaption class="gallery__discription">Неродные просторы</figcaption>
             </figure>
             <div class="gallery__author">Автор фото: Борис</div>
@@ -42,7 +42,7 @@
           </div>
           <div class="gallery__item">
             <figure class="gallery__image">
-              <img src="#" width="" height="" alt="">
+              <img src="img/photo-2-mobile.jpg" width="280" height="280" alt="">
               <figcaption class="gallery__discription">Местная растительность</figcaption>
             </figure>
             <div class="gallery__author">Автор фото: Сергей</div>
@@ -50,7 +50,7 @@
           </div>
           <div class="gallery__item">
             <figure class="gallery__image">
-              <img src="#" width="" height="" alt="">
+              <img src="img/photo-3-mobile.jpg" width="280" height="280" alt="">
               <figcaption class="gallery__discription">Дорога на север</figcaption>
             </figure>
             <div class="gallery__author">Автор фото: Петр</div>
@@ -58,7 +58,7 @@
           </div>
           <div class="gallery__item">
             <figure class="gallery__image">
-              <img src="#" width="" height="" alt="">
+              <img src="img/photo-4-mobile.jpg" width="280" height="280" alt="">
               <figcaption class="gallery__discription">Мост дьявола</figcaption>
             </figure>
             <div class="gallery__author">Автор фото: Антон</div>
