--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <p class="interested__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <div class="interested__motel"><a href="#">Найти гостиницу</a></div>
         </div>
-        <div class="interested-map">
+        <div class="map">
           <img src="img/bg-map-mobile.jpg" width="320" height="350" alt="">
         </div>
       </div>
