--- a/photo.html
+++ b/photo.html
@@ -32,7 +32,7 @@
           <p class="intro__text intro__text--lineh">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </section>
         <section class="gallery">
-          <div class="gallery__item">
+          <div class="gallery__item gallery__item--photo">
             <figure class="gallery__image">
               <img src="img/photo-1-mobile.jpg" width="280" height="280" alt="">
               <figcaption class="gallery__discription">Неродные просторы</figcaption>
