--- a/photo.html
+++ b/photo.html
@@ -33,36 +33,44 @@
         </section>
         <section class="gallery">
           <div class="gallery__item gallery__item--photo">
-            <figure class="gallery__image">
+            <div class="gallery__image gallery__image--height">
               <img src="img/photo-1-mobile.jpg" width="280" height="280" alt="">
-              <figcaption class="gallery__discription">Неродные просторы</figcaption>
-            </figure>
-            <div class="gallery__author">Автор фото: Борис</div>
-            <a href="#" class="gallery__like">1350</a>
+            </div>
+            <div class="gallery__item-info">
+              <div class="gallery__discription">Неродные просторы</div>
+              <div class="gallery__author">Автор фото: Борис</div>
+              <a href="#" class="gallery__like">1350</a>
+            </div>
           </div>
           <div class="gallery__item">
-            <figure class="gallery__image">
+            <div class="gallery__image">
               <img src="img/photo-2-mobile.jpg" width="280" height="280" alt="">
-              <figcaption class="gallery__discription">Местная растительность</figcaption>
-            </figure>
-            <div class="gallery__author">Автор фото: Сергей</div>
-            <a href="#" class="gallery__like">143</a>
+            </div>
+            <div class="gallery__item-info">
+              <div class="gallery__discription">Местная растительность</div>
+              <div class="gallery__author">Автор фото: Сергей</div>
+              <a href="#" class="gallery__like">143</a>
+            </div>
           </div>
           <div class="gallery__item">
-            <figure class="gallery__image">
+            <div class="gallery__image">
               <img src="img/photo-3-mobile.jpg" width="280" height="280" alt="">
-              <figcaption class="gallery__discription">Дорога на север</figcaption>
-            </figure>
-            <div class="gallery__author">Автор фото: Петр</div>
-            <a href="#" class="gallery__like">96</a>
+            </div>
+            <div class="gallery__item-info">
+              <div class="gallery__discription">Дорога на север</div>
+              <div class="gallery__author">Автор фото: Петр</div>
+              <a href="#" class="gallery__like">96</a>
+            </div>
           </div>
           <div class="gallery__item">
-            <figure class="gallery__image">
+            <div class="gallery__image">
               <img src="img/photo-4-mobile.jpg" width="280" height="280" alt="">
-              <figcaption class="gallery__discription">Мост дьявола</figcaption>
-            </figure>
-            <div class="gallery__author">Автор фото: Антон</div>
-            <a href="#" class="gallery__like">254</a>
+            </div>
+            <div class="gallery__item-info">
+              <div class="gallery__discription">Мост дьявола</div>
+              <div class="gallery__author">Автор фото: Антон</div>
+              <a href="#" class="gallery__like">254</a>
+            </div>
           </div>
         </section>
         <div class="interested">
