--- a/photo.html
+++ b/photo.html
@@ -73,9 +73,9 @@
             </div>
           </div>
         </section>
-        <div class="interested">
-          <div class="interested__title">Все еще сомневаетесь?</div>
-          <p>Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+        <div class="doubt">
+          <div class="doubt__title">Все еще сомневаетесь?</div>
+          <p class="doubt__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
         <div class="video">
           <div class="video__slider"></div>
