--- a/photo.html
+++ b/photo.html
@@ -78,6 +78,7 @@
           <p class="doubt__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
         <div class="video">
+          <img src="img/video-mobile.jpg" width="320" height="201" alt="">
           <div class="video__slider"></div>
           <div class="video__update"></div>
           <div class="video__quality"></div>
