--- a/form.html
+++ b/form.html
@@ -28,18 +28,24 @@
           <img src="img/bg-back-mobile.jpg" width="320" height="390" alt="">
         </div>
         <section class="intro intro--hide">
-          <h1 class="intro__title">Оставьте свой отзыв</h1>
-          <p class="intro__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+          <h1 class="intro__title intro__title--fsize">Оставьте свой отзыв</h1>
+          <p class="intro__text intro__text--lineh">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
         </section>
         <form class="form" action="/echo" method="post">
           <div class="form__login">
             <div class="form__title">Представьтесь, пожалуйста:</div>
-            <label for="name">Имя:</label>
-            <input type="text" name="name" id="name" placeholder="Маргарита">
-            <label for="surname">Фамилия:</label>
-            <input type="text" name="surname" id="surname" placeholder="Мунтанион">
-            <label for="middle-name">Отчество:</label>
-            <input type="text" name="middle-name" id="middle-name" placeholder="Николаевна">
+            <div class="form__login-name">
+              <label for="name">Имя:</label>
+              <input type="text" name="name" id="name" placeholder="Маргарита">
+            </div>
+            <div class="form__login-surname">
+              <label for="surname">Фамилия:</label>
+              <input type="text" name="surname" id="surname" placeholder="Мунтанион">
+            </div>
+            <div class="form__ligin-middlename">
+              <label for="middle-name">Отчество:</label>
+              <input type="text" name="middle-name" id="middle-name" placeholder="Николаевна">
+            </div>
           </div>
           <div class="form__contacts">
             <div class="form__title">Контакная информация:</div>
