--- a/form.html
+++ b/form.html
@@ -65,13 +65,16 @@
             <div class="form__title">Ваше общее впечатление:</div>
             <ul class="form__impression-list">
               <li>
-                <input type="radio" name="impres" value="" id="rb-1" checked><label for="rb-1">Скорее положительное</label>
+                <input type="radio" name="impres" value="" id="rb-1" checked>
+                <label for="rb-1">Скорее положительное</label>
               </li>
               <li>
-                <input type="radio" name="impres" value="" id="rb-2"><label for="rb-2">Скорее отрицательное</label>
+                <input type="radio" name="impres" value="" id="rb-2">
+                <label for="rb-2">Скорее отрицательное</label>
               </li>
               <li>
-                <input type="radio" name="impres" value="" id="rb-3"><label for="rb-3">Затрудняюсь ответить</label>
+                <input type="radio" name="impres" value="" id="rb-3">
+                <label for="rb-3">Затрудняюсь ответить</label>
               </li>
             </ul>
           </div>
