--- a/form.html
+++ b/form.html
@@ -79,7 +79,7 @@
             </ul>
           </div>
           <div class="form__attractions">
-            <div class="form__title">Посещенные достопримечательности:</div>
+            <div class="form__title form__title--width">Посещенные достопримечательности:</div>
             <ul class="form__attractions-list">
               <li>
                 <input type="checkbox" id="chb-1" checked>
