Исправила подпись к фото

--- a/photo.html
+++ b/photo.html
@@ -37,8 +37,10 @@
               <img src="img/photo-1-mobile.jpg" width="280" height="280" alt="">
             </div>
             <div class="gallery__item-info">
-              <div class="gallery__discription">Неродные просторы</div>
-              <div class="gallery__author">Автор фото: Борис</div>
+              <div class="gallery__item-signature">
+                <div class="gallery__discription">Неродные просторы</div>
+                <div class="gallery__author">Автор фото: Борис</div>
+              </div>
               <a href="#" class="gallery__like">1350</a>
             </div>
           </div>
@@ -47,8 +49,10 @@
               <img src="img/photo-2-mobile.jpg" width="280" height="280" alt="">
             </div>
             <div class="gallery__item-info">
-              <div class="gallery__discription">Местная растительность</div>
-              <div class="gallery__author">Автор фото: Сергей</div>
+              <div class="gallery__item-signature">
+                <div class="gallery__discription">Местная растительность</div>
+                <div class="gallery__author">Автор фото: Сергей</div>
+              </div>
               <a href="#" class="gallery__like">143</a>
             </div>
           </div>
@@ -57,8 +61,10 @@
               <img src="img/photo-3-mobile.jpg" width="280" height="280" alt="">
             </div>
             <div class="gallery__item-info">
-              <div class="gallery__discription">Дорога на север</div>
-              <div class="gallery__author">Автор фото: Петр</div>
+              <div class="gallery__item-signature">
+                <div class="gallery__discription">Дорога на север</div>
+                <div class="gallery__author">Автор фото: Петр</div>
+              </div>
               <a href="#" class="gallery__like">96</a>
             </div>
           </div>
@@ -67,8 +73,10 @@
               <img src="img/photo-4-mobile.jpg" width="280" height="280" alt="">
             </div>
             <div class="gallery__item-info">
-              <div class="gallery__discription">Мост дьявола</div>
-              <div class="gallery__author">Автор фото: Антон</div>
+              <div class="gallery__item-signature">
+                <div class="gallery__discription">Мост дьявола</div>
+                <div class="gallery__author">Автор фото: Антон</div>
+              </div>
               <a href="#" class="gallery__like">254</a>
             </div>
           </div>
