Вынесла код для каждой версии

--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
               <label for="surname">Фамилия:</label>
               <input type="text" name="surname" id="surname" placeholder="Мунтанион">
             </div>
-            <div class="form__ligin-middlename">
+            <div class="form__login-middlename">
               <label for="middle-name">Отчество:</label>
               <input type="text" name="middle-name" id="middle-name" placeholder="Николаевна">
             </div>
