--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
           <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
         </nav>
         <div class="page-header__logo">
-          <img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона">
+          <a href="index.html"><img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона"></a>
         </div>
       </header>
       <div class="content">
