--- a/form.html
+++ b/form.html
@@ -19,13 +19,17 @@
           </div>
           <span class="main-nav__toggle main-nav__toggle--close">Открыть меню</span>
         </nav>
-        <div class="page-header__logo">
-          <a href="index.html"><img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона"></a>
-        </div>
+        <a href="index.html" class="page-header__logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
+          </picture>
+        </a>
       </header>
       <div class="content">
         <div class="content__mini-welcome">
-          <img src="img/bg-back-mobile.jpg" width="320" height="390" alt="">
+          <img src="img/text-sedona.svg" width="460" height="80" alt="">
         </div>
         <section class="intro intro--hide">
           <h1 class="intro__title intro__title--fsize">Оставьте свой отзыв</h1>
@@ -56,7 +60,7 @@
                 <label for="tel"> телефон:</label>
                 <div class="form__icon form__icon--width">
                   <input type="tel" name="tel" id="tel" placeholder="Введите телефон">
-                  <label for="tel"></label>
+                  <!--<label for="icon-tel"></label>-->
                 </div>
                 <div class="form__error">Ошибка, перепроверьте номер</div>
               </div>
@@ -64,7 +68,7 @@
                 <label for="email">Электронная почта:</label>
                 <div class="form__icon">
                   <input type="email" name="email" id="email" placeholder="Введите e-mail">
-                  <label for="email"></label>
+                  <!--<label for="email"></label>-->
                 </div>
               </div>
             </div>
