--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
           </div>
           <span class="main-nav__toggle main-nav__toggle--open">Открыть меню</span>
         </nav>
-        <div class="page-header__logo">
-          <img src="img/logo-sedona-mobile.svg" width="103" height="83" alt="Седона">
-        </div>
+        <a class="page-header__logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+            <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Седона">
+          </picture>
+        </a>
       </header>
       <div class="content">
         <div class="content__welcome">
-          <img src="img/bg-back-mobile.jpg" width="320" height="390" alt="">
+          <img src="img/text-sedona-index.svg" width="460" height="351" alt="">
         </div>
         <section class="intro">
           <h1 class="intro__title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -40,7 +44,7 @@
               <p>Седона не атракцион для туристов, там течет своя жизнь</p>
             </div>
             <div class="reasons__image">
-              <img src="img/photo-city.jpg" width="320" height="260" alt="">
+              <img src="img/photo-city.jpg" alt="" srcset="img/photo-city@2x.jpg 2x" width="800" height="256">
             </div>
             <ul class="reasons__lists">
               <li class="reasons__list reasons__list--sprite">
@@ -64,25 +68,25 @@
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
             <div class="reasons__image">
-              <img src="img/photo-bridge.jpg" width="320" height="260" alt="">
+              <img src="img/photo-bridge.jpg" alt="" srcset="img/photo-bridge@2x.jpg 2x" width="800" height="256">
             </div>
           </div>
-          <div class="reasons__wrapper reasons__wrapper--width">
-            <div class="reasons__item reasons__item--dif">
+          <div class="reasons__wrapper-width">
+            <div class="reasons__item-dif">
               <div class="reasons__title">Небольшая площадь</div>
               <div class="reasons__number">- №3 -</div>
               <p>Все достопримечательности находятся очень близко</p>
             </div>
           </div>
-          <div class="reasons__wrapper reasons__wrapper--width">
-            <div class="reasons__item reasons__item--dif">
+          <div class="reasons__wrapper-width">
+            <div class="reasons__item-dif">
               <div class="reasons__title">Красивая дорога</div>
               <div class="reasons__number">- №4 -</div>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </div>
-          <div class="reasons__wrapper reasons__wrapper--width">
-            <div class="reasons__item reasons__item--dif">
+          <div class="reasons__wrapper-width">
+            <div class="reasons__item-dif">
               <div class="reasons__title">Мало туристов</div>
               <div class="reasons__number">- №5 -</div>
               <p>Большинство едет в гранд каньон и толпится там</p>
