Все страницы готовы.
Осталось спрайты собрать и карту вставить.

--- a/form.html
+++ b/form.html
@@ -117,6 +117,7 @@
             <textarea placeholder="Опишите подробно все свои восторги " name="textarea" id="textarea"></textarea>
           </div>
           <button type="submit">Отправить отзыв</button>
+          <span class="form__besure">* &ndash; обязательные поля</span>
         </form>
       </div>
       <footer class="page-footer">
