--- a/photo.html
+++ b/photo.html
@@ -37,8 +37,12 @@
         </section>
         <section class="gallery">
           <div class="gallery__item gallery__item--photo">
-            <div class="gallery__image gallery__image--height">
-              <img src="img/photo-1-mobile.jpg" width="280" height="280" alt="">
+            <div class="gallery__image">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-1-desktop.jpg, img/photo-1-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg, img/photo-1-tablet@2x 2x">
+                <img src="img/photo-1-mobile.jpg" srcset="img/photo-1-mobile@2x 2x" width="280" height="280" alt="">
+              </picture>
             </div>
             <div class="gallery__item-info">
               <div class="gallery__item-signature">
@@ -50,7 +54,11 @@
           </div>
           <div class="gallery__item">
             <div class="gallery__image">
-              <img src="img/photo-2-mobile.jpg" width="280" height="280" alt="">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-2-desktop.jpg, img/photo-2-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg, img/photo-2-tablet@2x 2x">
+                <img src="img/photo-2-mobile.jpg" srcset="img/photo-2-mobile@2x 2x" width="280" height="280" alt="">
+              </picture>
             </div>
             <div class="gallery__item-info">
               <div class="gallery__item-signature">
@@ -62,7 +70,11 @@
           </div>
           <div class="gallery__item">
             <div class="gallery__image">
-              <img src="img/photo-3-mobile.jpg" width="280" height="280" alt="">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-3-desktop.jpg, img/photo-3-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg, img/photo-3-tablet@2x 2x">
+                <img src="img/photo-3-mobile.jpg" srcset="img/photo-3-mobile@2x 2x" width="280" height="280" alt="">
+              </picture>
             </div>
             <div class="gallery__item-info">
               <div class="gallery__item-signature">
@@ -74,7 +86,11 @@
           </div>
           <div class="gallery__item">
             <div class="gallery__image">
-              <img src="img/photo-4-mobile.jpg" width="280" height="280" alt="">
+              <picture>
+                <source media="(min-width: 1200px)" srcset="img/photo-4-desktop.jpg, img/photo-4-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg, img/photo-4-tablet@2x 2x">
+                <img src="img/photo-4-mobile.jpg" srcset="img/photo-4-mobile@2x 2x" width="280" height="280" alt="">
+              </picture>
             </div>
             <div class="gallery__item-info">
               <div class="gallery__item-signature">
@@ -90,7 +106,11 @@
           <p class="doubt__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
         <div class="video">
-          <img src="img/video-mobile.jpg" width="320" height="201" alt="">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/video-desktop.jpg, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet.jpg, img/video-tablet@2x 2x">
+            <img src="img/video-mobile.jpg" srcset="img/video-mobile@2x 2x" width="320" height="201" alt="">
+          </picture>
           <div class="video__slider"></div>
           <div class="video__update"></div>
           <div class="video__quality"></div>
