--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
               <img src="img/photo-city.jpg" alt="" srcset="img/photo-city@2x.jpg 2x" width="800" height="256">
             </div>
             <ul class="reasons__lists">
-              <li class="reasons__list reasons__list--sprite">
+              <li class="reasons__list reasons__list--house">
                 <b class="reasons__list-title">Жилье</b>
                 <div class="reasons__list-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
               </li>
-              <li class="reasons__list reasons__list--order reasons__list--sprite">
+              <li class="reasons__list reasons__list--order reasons__list--gift">
                 <b class="reasons__list-title">Сувениры</b>
                 <div class="reasons__list-text">Не только китайского, но и местного производства!</div>
               </li>
-              <li class="reasons__list reasons__list--sprite">
+              <li class="reasons__list reasons__list--burger">
                 <b class="reasons__list-title">Еда</b>
                 <div class="reasons__list-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</div>
               </li>
