--- a/photo.html
+++ b/photo.html
@@ -111,10 +111,17 @@
             <source media="(min-width: 768px)" srcset="img/video-tablet.jpg, img/video-tablet@2x 2x">
             <img src="img/video-mobile.jpg" srcset="img/video-mobile@2x 2x" width="320" height="201" alt="">
           </picture>
-          <div class="video__slider"></div>
-          <div class="video__update"></div>
-          <div class="video__quality"></div>
-          <div class="video__deploy"></div>
+          <div class="video__range">
+            <div class="video__controls">
+              <div class="video__scale"></div>
+              <div class="video__toggle"></div>
+            </div>
+            <div class="video__update"></div>
+            <div class="video__menu">
+              <div class="video__quality"></div>
+              <div class="video__deploy"></div>
+            </div>
+          </div>
         </div>
       </div>
       <footer class="page-footer">
