--- a/form.html
+++ b/form.html
@@ -58,7 +58,7 @@
             <div class="form__contacts-wrapper">
               <div class="form__contacts-tel">
                 <label for="tel"> телефон:</label>
-                <div class="form__icon form__icon--width">
+                <div class="form__icon form__icon--width form__icon--tel">
                   <input type="tel" name="tel" id="tel" placeholder="Введите телефон">
                   <!--<label for="icon-tel"></label>-->
                 </div>
@@ -66,7 +66,7 @@
               </div>
               <div class="form__contacts-mail">
                 <label for="email">Электронная почта:</label>
-                <div class="form__icon">
+                <div class="form__icon form__icon--mail">
                   <input type="email" name="email" id="email" placeholder="Введите e-mail">
                   <!--<label for="email"></label>-->
                 </div>
