--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="main-nav__wrapper main-nav__wrapper--close">
             <ul class="main-nav__list">
               <li class="main-nav__item"><a>Главная</a></li>
-              <li class="main-nav__item"><a href="photo.html">Фото и видео</a></li>
+              <li class="main-nav__item main-nav__item--margin"><a href="photo.html">Фото и видео</a></li>
               <li class="main-nav__item"><a href="form.html">Форма отзыва</a></li>
               <li class="main-nav__item"><a href="#">Html Academy</a></li>
             </ul>
