--- a/form.html
+++ b/form.html
@@ -123,13 +123,13 @@
       <footer class="page-footer">
         <div class="page-footer__wrapper">
           <a href="#" class="page-footer__visit">#visitsedona</a>
-          <section class="page-footer__social">
+          <div class="page-footer__social">
             <div class="social-links">
               <a href="#" class="social-links__common social-links__common--tw"></a>
               <a href="#" class="social-links__common social-links__common--fb"></a>
               <a href="#" class="social-links__common social-links__common--yut"></a>
             </div>
-          </section>
+          </div>
           <div class="page-footer__copyright">Разработано</div>
         </div>
       </footer>
