--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h1 class="intro__title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h1>
           <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
         </section>
-        <section class="reasons">
+        <div class="reasons">
           <div class="reasons__wrapper reasons__wrapper--transfer">
             <div class="reasons__item">
               <div class="reasons__title">Настоящий городок</div>
@@ -92,7 +92,7 @@
               <p>Большинство едет в гранд каньон и толпится там</p>
             </div>
           </div>
-        </section>
+        </div>
         <div class="interested">
           <div class="interested__title">Заинтересовались?</div>
           <p class="interested__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
@@ -105,13 +105,13 @@
       <footer class="page-footer">
         <div class="page-footer__wrapper">
           <a href="#" class="page-footer__visit">#visitsedona</a>
-          <section class="page-footer__social">
+          <div class="page-footer__social">
             <div class="social-links">
               <a href="#" class="social-links__common social-links__common--tw"></a>
               <a href="#" class="social-links__common social-links__common--fb"></a>
               <a href="#" class="social-links__common social-links__common--yut"></a>
             </div>
-          </section>
+          </div>
           <div class="page-footer__copyright">Разработано</div>
         </div>
       </footer>
