--- a/photo.html
+++ b/photo.html
@@ -35,7 +35,7 @@
           <h1 class="intro__title intro__title--fsize">Фото и видео</h1>
           <p class="intro__text intro__text--lineh">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </section>
-        <section class="gallery">
+        <div class="gallery">
           <div class="gallery__item gallery__item--photo">
             <div class="gallery__image">
               <picture>
@@ -100,7 +100,7 @@
               <a href="#" class="gallery__like">254</a>
             </div>
           </div>
-        </section>
+        </div>
         <div class="doubt">
           <div class="doubt__title">Все еще сомневаетесь?</div>
           <p class="doubt__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
@@ -127,13 +127,13 @@
       <footer class="page-footer">
         <div class="page-footer__wrapper">
           <a href="#" class="page-footer__visit">#visitsedona</a>
-          <section class="page-footer__social">
+          <div class="page-footer__social">
             <div class="social-links">
               <a href="#" class="social-links__common social-links__common--tw"></a>
               <a href="#" class="social-links__common social-links__common--fb"></a>
               <a href="#" class="social-links__common social-links__common--yut"></a>
             </div>
-          </section>
+          </div>
           <div class="page-footer__copyright">Разработано</div>
         </div>
       </footer>
