--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
               <img src="img/photo-bridge.jpg" alt="" srcset="img/photo-bridge@2x.jpg 2x" width="800" height="256">
             </div>
           </div>
-          <div class="reasons__wrapper-width">
+          <div class="reasons__wrapper reasons__wrapper-width">
             <div class="reasons__item-dif">
               <div class="reasons__title">Небольшая площадь</div>
               <div class="reasons__number">- №3 -</div>
               <p>Все достопримечательности находятся очень близко</p>
             </div>
           </div>
-          <div class="reasons__wrapper-width">
+          <div class="reasons__wrapper reasons__wrapper-width">
             <div class="reasons__item-dif">
               <div class="reasons__title">Красивая дорога</div>
               <div class="reasons__number">- №4 -</div>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </div>
           </div>
-          <div class="reasons__wrapper-width">
+          <div class="reasons__wrapper reasons__wrapper-width">
             <div class="reasons__item-dif">
               <div class="reasons__title">Мало туристов</div>
               <div class="reasons__number">- №5 -</div>
