--- a/form.html
+++ b/form.html
@@ -116,7 +116,7 @@
             <label for="textarea"></label>
             <textarea placeholder="Опишите подробно все свои восторги " name="textarea" id="textarea"></textarea>
           </div>
-          <button type="submit">Отправить отзыв</button>
+          <button type="submit" class="btn">Отправить отзыв</button>
           <span class="form__besure">* &ndash; обязательные поля</span>
         </form>
       </div>
@@ -133,6 +133,11 @@
           <div class="page-footer__copyright">Разработано</div>
         </div>
       </footer>
+      <div class="modal-error">
+        <div class="modal-error__title">Что-то пошло не так!</div>
+        <p>Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button type="submit" class="btn"></button>
+      </div>
     </div>
   </body>
 </html>
