Скрипт на открытие и закрытие

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <li class="main-nav__item"><a href="#">Html Academy</a></li>
             </ul>
           </div>
-          <span class="main-nav__toggle main-nav__toggle--open">Открыть меню</span>
+          <a href="#" class="main-nav__toggle main-nav__toggle--open"></a>
         </nav>
         <a class="page-header__logo">
           <picture>
@@ -120,5 +120,22 @@
         </div>
       </footer>
     </div>
+    <script>
+      var open = document.querySelector (".main-nav__toggle--open");
+      var nav = document.querySelector (".main-nav__wrapper");
+      var close = document.querySelector (".main-nav__wrapper--close");
+      open.addEventListener ("click", function(event) {
+        event.preventDefault();
+        nav.classList.add ("main-nav__wrapper--show");
+        open.classList.remove ("main-nav__toggle--open");
+        open.classList.remove ("main-nav__toggle");
+      });
+      close.addEventListener ("click", function (event) {
+        event.preventDefault();
+        nav.classList.remove ("main-nav__wrapper--show");
+        open.classList.add ("main-nav__toggle--open");
+        open.classList.add ("main-nav__toggle");
+      });
+    </script>
   </body>
 </html>
