Скрыла скрипт на открытие меню.
С этим скриптом не открываются другие страницы.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="page-footer__copyright">Разработано</div>
         </div>
       </footer>
-    </div>
+    </div><!--
     <script>
       var open = document.querySelector (".main-nav__toggle--open");
       var nav = document.querySelector (".main-nav__wrapper");
@@ -136,6 +136,6 @@
         open.classList.add ("main-nav__toggle--open");
         open.classList.add ("main-nav__toggle");
       });
-    </script>
+    </script>-->
   </body>
 </html>
